refactor SVG date conversion and star rating text color